--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,24 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+:root {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  min-height: 100dvh;
+  min-width: 100dvw;
+  position: relative;
+}
+iframe {
+  background: red;
+  border: none;
+  &:hover,
+  &.active {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
